--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 /node_modules/*
 
 #sass cache files
-.sass-cache/*/style.scssc
-.sass-cache
+.*.scssc
+.*/.scssc
+.*/**/.scssc
 
 #ds store
 .DS_Store
@@ -14,3 +15,8 @@
 *.psd
 */.psd
 */**/.psd
+
+#sketch
+*.sketch
+*/.sketch
+*/**/.sketch
