--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "me",
   "version": "0.0.1",
-  "main": "app.js",
-  "repository": {
+w  "repository": {
     "type": "git",
     "url": "git@github.com:erchsm/me.git"
   },
@@ -13,14 +12,21 @@
     "browser-sync": "^2.11.1",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-coffee": "^2.3.1",
     "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.6.0",
+    "gulp-debug": "^2.1.2",
     "gulp-livereload": "^3.8.1",
     "gulp-minify-css": "^1.2.3",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
+    "gulp-sketch": "^0.1.0",
     "gulp-uglify": "^1.5.1",
-    "gulp-wait": "0.0.2"
+    "gulp-util": "^3.0.7",
+    "gulp-wait": "0.0.2",
+    "npm-which": "^2.0.0",
+    "retina.js": "^1.1.0",
+    // "sketchtool": "^1.4.0"
   }
 }
