--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "me",
   "version": "0.0.1",
-w  "repository": {
+  "repository": {
     "type": "git",
     "url": "git@github.com:erchsm/me.git"
   },
@@ -26,7 +26,6 @@ w  "repository": {
     "gulp-util": "^3.0.7",
     "gulp-wait": "0.0.2",
     "npm-which": "^2.0.0",
-    "retina.js": "^1.1.0",
-    // "sketchtool": "^1.4.0"
+    "retina.js": "^1.1.0"
   }
 }
